# threat-intelligence-pipeline

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docker/: docker-compose.yml
docs/: adding-a-feed.md  misp-setup.md  setup.md
tests/: conftest.py  test_abusech_feed.py  test_alert_enricher.py  test_dedup_cache.py  test_external_enrichment.py  test_feed_scheduler.py  test_misp_lookup.py  test_normaliser.py  test_otx_feed.py  test_slack_notifier.py  test_tag_writer.py
tip/: cli.py
tip/core/: config.py  models.py  scoring.py  timeutil.py
tip/enrichment/: alert_enricher.py  external_enricher.py  misp_lookup.py  shodan.py  tag_writer.py  virustotal.py
tip/feeds/: abusech_feed.py  base.py  feed_scheduler.py  otx_feed.py
tip/misp/: client.py  dedup_cache.py  normaliser.py
tip/notification/: slack_notifier.py
tip/siem/: elastic_client.py  sentinel_client.py
