[project]
name = "threat-intel-pipeline"
version = "0.1.0"
description = "Production-grade threat intelligence pipeline: OTX + Abuse.ch → MISP → Sentinel/Elastic enrichment → Slack"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
keywords = ["threat-intelligence", "MISP", "IOC", "SIEM", "cybersecurity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "pymisp>=2.4",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.20",
    "ruff>=0.4",
    "coverage>=7.0",
]
redis = ["redis>=5.0"]
stix = ["stix2>=3.0"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
metrics = ["prometheus-client>=0.20"]

[project.scripts]
tip = "tip.cli:main"

[project.urls]
"Homepage" = "https://github.com/theloav/threat-intelligence-pipeline"
"Bug Tracker" = "https://github.com/theloav/threat-intelligence-pipeline/issues"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tip*"]

[tool.setuptools.package-data]
tip = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:pymisp.*",
    "ignore::DeprecationWarning:dateutil.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Click uses function calls in argument defaults by design
# E501: line length handled by formatter, not enforced as hard error
# UP042: `class Foo(str, Enum)` is intentional for MISP-compatible string enums
ignore = ["B008", "E501", "UP042"]

[tool.coverage.run]
source = ["tip"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
